Fix project slug page for alignments

--- a/public/css/biospex.css
+++ b/public/css/biospex.css
@@ -980,6 +980,20 @@ p a:hover { color: #f00; }
 #splash img { margin-left: 90px; }
 #splash h1 { color: #241d4e !important; font-size: 20px; font-weight: bold; margin-left: 90px; }
 
+#banner {
+  background-position: top left;
+  background-repeat: no-repeat;
+  -webkit-background-size: 100% 250px;
+  -moz-background-size: 100% 250px;
+  -o-background-size:  100% 250px;
+  background-size:  100% 250px;
+  margin-top: 45px;
+  height: 250px;
+}
+#banner img {
+  margin: 20px 0px 0px 20px;
+}
+
 .form-group.required .control-label:after { content:" *"; color:#ff0000; }
 .form-group label { font-weight: bold; }
 
